nbproject/private/Default-build.log
( cd src;make all )
make[1]: Entering directory `/home/dev/svnProjects/myproject/xmlParser/src'
/usr/bin/g++ -g -O2 -std=c++11 -Wall -march=native -mtune=native -DOF_USING_GTK -pthread -D_REENTRANT -I../include -I/home/dev/boost/include    -c -o XmlParser.o XmlParser.cpp
XmlParser.cpp: In member function ‘void xmlp::XmlParser::parseTag(const string&, std::string&)’:
XmlParser.cpp:17:21: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
         if (pos == -1 || pos > len) {
                     ^
/usr/bin/g++ -g -O2 -std=c++11 -Wall -march=native -mtune=native -DOF_USING_GTK -pthread -D_REENTRANT -I../include -I/home/dev/boost/include    -c -o XmlNode.o XmlNode.cpp
XmlNode.cpp:12:5: error: ‘XmlNode’ does not name a type
     XmlNode::XmlNode(const std::string& tagContent, XmlNode::Ptr parent, bool isSingle, const std::string& content) :
     ^
XmlNode.cpp:21:10: error: ‘XmlNode’ has not been declared
     void XmlNode::addChild(const std::string& tagContent) {
          ^
XmlNode.cpp: In function ‘void messageapi::addChild(const string&)’:
XmlNode.cpp:22:9: error: ‘children_’ was not declared in this scope
         children_.push_back(XmlNode::Ptr(new XmlNode(tagContent, shared_from_this())));
         ^
XmlNode.cpp:22:29: error: ‘XmlNode’ has not been declared
         children_.push_back(XmlNode::Ptr(new XmlNode(tagContent, shared_from_this())));
                             ^
XmlNode.cpp:22:46: error: expected type-specifier before ‘XmlNode’
         children_.push_back(XmlNode::Ptr(new XmlNode(tagContent, shared_from_this())));
                                              ^
XmlNode.cpp: At global scope:
XmlNode.cpp:25:10: error: ‘XmlNode’ has not been declared
     void XmlNode::addChild(const std::string& tagContent, bool isSingle, const std::string& content) {
          ^
XmlNode.cpp: In function ‘void messageapi::addChild(const string&, bool, const string&)’:
XmlNode.cpp:26:9: error: ‘children_’ was not declared in this scope
         children_.push_back(XmlNode::Ptr(new XmlNode(tagContent, shared_from_this(), isSingle, content)));
         ^
XmlNode.cpp:26:29: error: ‘XmlNode’ has not been declared
         children_.push_back(XmlNode::Ptr(new XmlNode(tagContent, shared_from_this(), isSingle, content)));
                             ^
XmlNode.cpp:26:46: error: expected type-specifier before ‘XmlNode’
         children_.push_back(XmlNode::Ptr(new XmlNode(tagContent, shared_from_this(), isSingle, content)));
                                              ^
XmlNode.cpp: At global scope:
XmlNode.cpp:29:10: error: ‘XmlNode’ has not been declared
     void XmlNode::deleteChild(const std::string& nodeName) {
          ^
XmlNode.cpp: In function ‘void messageapi::deleteChild(const string&)’:
XmlNode.cpp:30:14: error: ‘ChildItr’ was not declared in this scope
         for (ChildItr childIt = children_.begin(); childIt != children_.end(); ++childIt) {
              ^
XmlNode.cpp:30:23: error: expected ‘;’ before ‘childIt’
         for (ChildItr childIt = children_.begin(); childIt != children_.end(); ++childIt) {
                       ^
XmlNode.cpp:30:52: error: ‘childIt’ was not declared in this scope
         for (ChildItr childIt = children_.begin(); childIt != children_.end(); ++childIt) {
                                                    ^
XmlNode.cpp:30:63: error: ‘children_’ was not declared in this scope
         for (ChildItr childIt = children_.begin(); childIt != children_.end(); ++childIt) {
                                                               ^
XmlNode.cpp: At global scope:
XmlNode.cpp:39:24: error: ‘XmlNode’ has not been declared
     const std::string& XmlNode::getAttributeValue(const std::string& attrName) {
                        ^
In file included from XmlNode.cpp:5:0:
XmlNode.cpp: In function ‘const string& messageapi::getAttributeValue(const string&)’:
XmlNode.cpp:41:47: error: ‘attributes_’ was not declared in this scope
         BOOST_FOREACH(XmlAttribute::Ptr attr, attributes_) {
                                               ^
/home/dev/boost/include/boost/foreach.hpp:933:6: note: in definition of macro ‘BOOST_FOREACH_EVALUATE’
     (COL)
      ^
/home/dev/boost/include/boost/foreach.hpp:1094:77: note: in expansion of macro ‘BOOST_FOREACH_CONTAIN’
     if (boost::foreach_detail_::auto_any_t BOOST_FOREACH_ID(_foreach_col) = BOOST_FOREACH_CONTAIN(COL)) {} else   \
                                                                             ^
XmlNode.cpp:41:9: note: in expansion of macro ‘BOOST_FOREACH’
         BOOST_FOREACH(XmlAttribute::Ptr attr, attributes_) {
         ^
XmlNode.cpp:41:23: error: ‘XmlAttribute’ has not been declared
         BOOST_FOREACH(XmlAttribute::Ptr attr, attributes_) {
                       ^
/home/dev/boost/include/boost/foreach.hpp:1101:14: note: in definition of macro ‘BOOST_FOREACH’
         for (VAR = BOOST_FOREACH_DEREF(COL); !BOOST_FOREACH_ID(_foreach_continue); BOOST_FOREACH_ID(_foreach_continue) = true)
              ^
XmlNode.cpp:41:41: error: expected ‘;’ before ‘attr’
         BOOST_FOREACH(XmlAttribute::Ptr attr, attributes_) {
                                         ^
/home/dev/boost/include/boost/foreach.hpp:1101:14: note: in definition of macro ‘BOOST_FOREACH’
         for (VAR = BOOST_FOREACH_DEREF(COL); !BOOST_FOREACH_ID(_foreach_continue); BOOST_FOREACH_ID(_foreach_continue) = true)
              ^
XmlNode.cpp:42:42: error: ‘attr’ was not declared in this scope
             if (boost::iequals(attrName, attr->getName())) {
                                          ^
XmlNode.cpp: At global scope:
XmlNode.cpp:49:5: error: ‘XmlNode’ does not name a type
     XmlNode::Ptr XmlNode::getChildNode(const std::string& nodeName) {
     ^
XmlNode.cpp:58:5: error: ‘XmlNode’ does not name a type
     XmlNode::Ptr XmlNode::operator[](int index) {
     ^
XmlNode.cpp:68:10: error: ‘XmlNode’ has not been declared
     void XmlNode::setAttribute(XmlAttribute::Ptr attribute) {
          ^
XmlNode.cpp:68:32: error: variable or field ‘setAttribute’ declared void
     void XmlNode::setAttribute(XmlAttribute::Ptr attribute) {
                                ^
XmlNode.cpp:68:32: error: ‘XmlAttribute’ has not been declared
XmlNode.cpp:160:1: error: expected ‘}’ at end of input
 }
 ^
make[1]: *** [XmlNode.o] Error 1
make[1]: Leaving directory `/home/dev/svnProjects/myproject/xmlParser/src'
make: *** [all] Error 2
